    - Removed default_max_town_blocks from the config as it's no longer used. All block settings are now in the townLevel and town_block_ratio entries.
    - Added config.yml settings for force_explosions_on, force_monsters_on and force_fire_on. These will prevent Mayors toggling the settings.
    - Added world configs for Forced Fire,Explosions and Monsters.
    - Moved some townyworld commands the a new toggle command '/townyworld toggle claimable, usingtowny, pvp, explosion, fire and mobs.
    - Changes to protect towns not in nations from explosions during a war.
    - Added regex parsing on town and nation renaming.
    - Removed access to '/town set mayor' command for assistants.
    - Fixed '/res set mode townclaim' attempting to claim the wrong blocks.
    - Added a town hasUpkeep setting for towns. Default sets to false if using an NPC mayor, or manually configurable by server admins.
    - Added a 'Mob Spawns' indicator to the '/town' status display.
    - Cleaned up display for /town /ta and /tw.
    - '/town set homeblock' no longer gets confused by your own homeblock when calculating the distance to the closest homeblock.
    - Moved many config settings to the seperate world data files for individual adjustment.
      (PvP, town Mob spawns, town Firespread and town Explosions are now configurable per world.)
    - Added '/townyworld toggle' controls for all new world settings.
    - Removed pve_in_non_pvp_towns from config.yml as it's no longer needed.
    - fixed an error in loading which prevented mob removal entities from being updated upon a reload.
v0.73.1:
    - Fixed more typo's (a never ending job).
    - Added a debug message on startup to help descover incorrect town/world file configs.
    - Fixed '/town toggle pvp' to correctly watch the forced world pvp, not the pvp setting.
    - Fixed resident file being deleted when deletign a town. Should only be deleted if through the inactive player timer or is an NPC.