@@ -119,8 +119,8 @@ public class TownCommand implements CommandExecutor  {
 				
 				// Check permission to use spawn travel
 				if (!isTownyAdmin &&
-						(split.length == 1 && !TownySettings.isAllowingTownSpawn() && !plugin.hasPermission(player, "towny.spawntp")) ||
-						(split.length > 1 && !TownySettings.isAllowingPublicTownSpawnTravel() && !plugin.hasPermission(player, "towny.publicspawntp")))
+						(split.length == 1 && (!TownySettings.isAllowingTownSpawn() || !plugin.hasPermission(player, "towny.spawntp"))) ||
+						(split.length > 1 && (!TownySettings.isAllowingPublicTownSpawnTravel() || !plugin.hasPermission(player, "towny.publicspawntp"))))
 					throw new TownyException(TownySettings.getLangString("msg_err_town_spawn_forbidden"));
 				
 				Resident resident = plugin.getTownyUniverse().getResident(player.getName());
