@@ -357,4 +357,6 @@ v0.73.1:
     - Fixed more typo's (a never ending job).
     - Added a debug message on startup to help descover incorrect town/world file configs.
     - Fixed '/town toggle pvp' to correctly watch the forced world pvp, not the pvp setting.
-    - Fixed resident file being deleted when deletign a town. Should only be deleted if through the inactive player timer or is an NPC.
+    - Fixed resident file being deleted when deleting a town. Should only be deleted if through the inactive player timer or is an NPC.
+    - Fixed a permissions test error on spawn travel. It was failing to abort a teleport to spawn if you didn't have the correct permissions.
+    - setting devmode and debug are now temporary settings for the current session only. They will not cause a save of config.yml.
